src/styles.css
html,
body,
.viewport {
  background-color: #EEEEEE;
  display: flex;
  margin: 0;
  width: 100%;
}

hrz-root {
  align-items: center;
  display: flex;
  flex-direction: column;
  width: 100%;
}

hrz-header {
  background-color: #FAFAFA;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  height: 50px;
  margin-bottom: .3rem;
  position: fixed;
  width: 100%;
}

hrz-race {
  margin-top: 50px;
  max-width: 768px;
  width: 100%;
}

.race {
  background-color: #EEEEEE;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
  max-width: 768px;
}

.streamer {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  display: flex;
  height: 5rem;
  justify-content: space-between;
  width: 100%;
}

.streamer--left {
  display: flex;
}

.streamer--right {
  display: flex;
}

.streamer__color {
  width: .3rem;
}

.streamer__data {
  align-self: flex-start;
  display: flex;
  font-size: 1rem;
  font-family: 'Roboto', sans-serif;
  justify-content: flex-end;
  padding: 1rem 1rem 0 0;
  text-transform: uppercase;
}

.fa {
  padding: .3rem;
}

.fa-cog {
  align-self: center;
  font-size: 1.3rem;
}

.filteris {
  align-self: center;
  color: #1DACEB;
  display: flex;
  justify-content: space-between;
  width: 7rem;
}

.filteris__data {
  font-size: 2rem;
}

.elabe {
  color: #616161;
  display: flex;
  flex-direction: column;
  margin-right: .5rem;
}

.elabe__data {
  align-self: center;
}

.circle {
  align-self: center;
  border-radius: 50%;
  height: 4rem;
  width: 4rem;
  display: flex;
  justify-content: center;
  margin: 1rem;
  text-decoration: none;
}

.fa.fa-list-ul {
  align-self: center;
  color: #FAFAFA;
  opacity: 0.5;
  font-size: larger;
  padding: 0;
}

.streamer__candidate {
  display: flex;
  flex: 1 0 content;
  flex-direction: column;
  justify-content: flex-start;
  margin-top: .1rem;
  margin-bottom: .1rem;
}

.name {
  display: flex;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;
  padding: 0 0 0 1rem;
  text-align: left;
  text-transform: uppercase;
}

.name__name {
  font-size: 1rem;
  letter-spacing: .2rem;
  margin: 0;
}

.name__surname {
  font-size: small;
}

.party {
  color: #212121;
  font-family: 'Roboto', sans-serif;
  font-size: .7rem;
  letter-spacing: .1rem;
  margin-left: .1rem;
  padding: 0 0 0 1rem;
  text-align: left;
  text-transform: uppercase;
  text-decoration: none;
}

.portrait {
  align-self: center;
  border-radius: 50%;
  height: 4rem;
  margin-left: 1rem;
  object-fit: cover;
  width: 4rem;
}

.candidate {
  background-color: white;
  background-size: cover;
  border-top: none;
  display: flex;
  flex: 1;
  margin: .2rem;
}

.lepen {
}

.fillon {
}

.macron {
}

.hamon {
}

.melenchon {
}

.dupont {
}

.jadot {
}

.poutou {
}

.arthaud {
}

.cheminade {
}

.asselineau {
}

.regis {
}

#warning-message {
  display: none;
}

@media only screen and (orientation: portrait) {
  body, html {
    background-color: #448AFF;
  }

  #wrapper {
    display: none;
  }

  #warning-message {
    margin: 20%;
    display: inline-flex;
    color: #E3F2FD;
    font-family: 'Roboto', sans-serif;
  }
}

@media only screen and (orientation: landscape) {
  #warning-message {
    display: none;
  }
}

